[package]
name = "pinespot-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# openssl = { version = "0.10", features = ["vendored"] }
rustls = { version = "0.23.32", features = ["std", "log", "logging", "ring"] }
anyhow = "1.0.100"
axum = "0.8.4"
axum-core = "0.5.2"
axum-extra = { version = "0.10.1", features = [
  "async-read-body",
  "cookie",
  "cookie-private",
  "cookie-signed",
  "multipart",
  "query",
  "scheme",
  "typed-header",
  "typed-routing",
] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
jwt-simple = { version = "0.12.12", default-features = false, features = [
  "pure-rust",
] }
lapin = "3.6.0"
oauth2 = "5.0.0"
rand = "0.9.2"
redis = { version = "0.32.4", features = [
  "r2d2",
  "tokio-comp",
  "tokio-rustls-comp",
] }
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  "rustls-tls",
] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "derive",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
] }
sqlx-core = "0.8.6"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.3"
